--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <a href="SpatialDB/heatmap.html">Heatmap</a>
+        <a href="SpatialDB/img/heatmap.html">Heatmap</a>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
